Fixed week days misalignments on screens with not full height

--- a/src/app/month/calendar/calendar.component.scss
+++ b/src/app/month/calendar/calendar.component.scss
@@ -25,13 +25,13 @@
     }
 }
 
-@media(min-width: 1200px) {
+@media(min-width: 1500px) {
     .day-flex-item {
         flex-basis: calc(100%/7);
     }
 }
 
-@media(max-width: 1200px) {
+@media(max-width: 1500px) {
     .day-flex-item {
         flex-basis: 25%;
     }
